--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CVPR2021_PDNet</title>
+<title>FE108</title>
 
 <style media="screen" type="text/css">
 body
@@ -44,13 +44,13 @@ var _hmt = _hmt || [];
 
 <body>
 
-<h2><p><font size="6" color="black"><b>Dataset</b></font></p></h2>
+<h2><p><font size="6" color="black"><b>Application for Access for Non-Commercial Use</b></font></p></h2>
 <hr/>
 
 <font size="4"> Both <font size="4" color="red">training set</font> and <font size="4" color="red">testing set</font> can be obtained via form request! </font>
 <br><br>
 
-<font size="3">
+<font size="4">
 	To request access to the dataset for non-commercial use, please review the terms and conditions. If you agree with them, please fill the form below and then click the "<font color="black">Send Request</font>" button to achieve a request. Please fill in your official university/company email address. Thank you!
 
 	<br>
@@ -69,34 +69,21 @@ The dataset can be used freely if you agree with all the following terms.<br>
 </font>
 <br>
 
-<h3>Sending Request to Prof. Xin Yang (xinyang@dlut.edu.cn):</h3>
+<h3>Sending Request to Us:</h3>
 
 <form class="form" id="emailForm">
-	Name: <input id="first" name='name' type="text" style="width: 400px; height: 10px;" placeholder="Your name..." class="form__input" />
+	Name: <input id="first" name='name' type="text" style="width: 400px; height: 15px;" placeholder="Your name..." class="form__input" />
 	<br><br>
-	Institute: <input id="second" name='institute' type="text" placeholder="Your institute..." class="form__input" />
+	Institute: <input id="second" name='institute' type="text" style="width: 400px; height: 15px;" placeholder="Your institute..." class="form__input" />
 	<br><br>
-	E-mail: <input id="third" name='email' type="text" placeholder="Your E-mail address..." class="form__input" />
+	E-mail: <input id="third" name='email' type="text" style="width: 400px; height: 15px;" placeholder="Your E-mail address..." class="form__input" />
     <!--<textarea id="third" name='e-mail' type="text" placeholder="Your E-mail..." class="form__input"></textarea>-->
 </form>
 <br>
 <button id="btnSubmit">Send Request</button>
 <br><br><br><br>
 
-<!--<br><br><br><br>-->
-<!--<h2><p><font size="6" color="black"><b>Report</b></font></p></h2>-->
-<!--<hr/>-->
-<!--<table align="center">-->
-<!--<tr>-->
-	<!--<td align="center"><embed src="report.mp4" width="800" height="450"></td>-->
-<!--</tr>-->
-<!--</table>-->
 
-
-
-
-<br><br>
-<h2>Website visit statistics</h2>
 <hr/>
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=tt&d=EsUkw_m2bHmFxftVUNklQ6CouRkNwbDnlRJFNuQiqBU&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
 
