--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -42,7 +42,7 @@ var _hmt = _hmt || [];
 	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js"></script>
 </head>
 
-<body>Jiqing Zhang, Xin Yang, Yingkai Fu, Xiaopeng Wei, Baocai Yin, Bo Dong
+<body>
   
 <table align="center">
 <td align="center">
@@ -55,8 +55,6 @@ var _hmt = _hmt || [];
   <font size="3"><b>Baocai Yin</b></font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="https://dongshuhao.github.io/" target="_blank"><font size="3"><b>Bo Dong</b></font></a><sup><font size="2">2</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 	<br>
-	<font size="3">Qiang Zhang</font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
-	<font size="3">Xiaopeng Wei</font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 </h3>
 
 <sup><font size="2">1</font></sup>
@@ -101,11 +99,11 @@ The dataset can be used freely if you agree with all the following terms.<br>
 <h3>Sending Request to Us:</h3>
 
 <form class="form" id="emailForm">
-	Name: <input id="first" name='name' type="text" style="width: 400px; height: 15px;" placeholder="Your name..." class="form__input" />
+	Name: <input id="first" name='name' type="text" style="width: 700px; height: 15px;" placeholder="Your name..." class="form__input" />
 	<br><br>
-	Institute: <input id="second" name='institute' type="text" style="width: 400px; height: 15px;" placeholder="Your institute..." class="form__input" />
+	Institute: <input id="second" name='institute' type="text" style="width: 700px; height: 15px;" placeholder="Your institute..." class="form__input" />
 	<br><br>
-	E-mail: <input id="third" name='email' type="text" style="width: 400px; height: 15px;" placeholder="Your E-mail address..." class="form__input" />
+	E-mail: <input id="third" name='email' type="text" style="width: 700px; height: 15px;" placeholder="Your E-mail address..." class="form__input" />
     <!--<textarea id="third" name='e-mail' type="text" placeholder="Your E-mail..." class="form__input"></textarea>-->
 </form>
 <br>
