--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -46,6 +46,7 @@ var _hmt = _hmt || [];
   
 <table align="center">
 <td align="center">
+<br><br>  
 <h1>Object Tracking by Jointly Exploiting Frame and Event Domain</h1>
 <h3>
 	<a href="https://zhangjiqing.com" target="_blank"><font size="3"><b>Jiqing Zhang</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -112,7 +113,7 @@ The dataset can be used freely if you agree with all the following terms.<br>
 
 
 <hr/>
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=400&t=tt&d=EsUkw_m2bHmFxftVUNklQ6CouRkNwbDnlRJFNuQiqBU&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=cgnXxI9HEVeFWXB9OHp4vJCVBQJNiN6JcXvp43AQx44&w=200"></script>
 
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
