--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -4,30 +4,6 @@
 <head>
 <title>FE108</title>
 
-<style media="screen" type="text/css">
-body
-{
-  border: 0pt none;
-  font-family: inherit;
-  font-size: 100%;
-  font-style: inherit;
-  font-weight: inherit;
-  margin: 0pt;
-  outline-color: invert;
-  outline-style: none;
-  outline-width: 0pt;
-  padding: 0pt;
-  vertical-align: baseline;
-}
-body {
-  position: relative;
-  margin: 3em auto 2em auto;
-  width: 1080px;
-  font-family: Times New Roman, Lato, Verdana, Helvetica, sans-serif;
-  font-size: 14px;
-  background: #fdfdfd;
-}
-</style>
 
 <script>
 var _hmt = _hmt || [];
@@ -50,7 +26,7 @@ var _hmt = _hmt || [];
 <h1>Object Tracking by Jointly Exploiting Frame and Event Domain</h1>
 <h3>
 	<a href="https://zhangjiqing.com" target="_blank"><font size="3"><b>Jiqing Zhang</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
-  <a href="https://xinyangdut.github.io/" target="_blank"><font size="3"><b>Xin Yang</b></font></a><sup><font size="2">1,*</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
+  <a href="https://xinyangdut.github.io/" target="_blank"><font size="3"><b>Xin Yang</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
   <font size="3"><b>Yingkai Fu</b></font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
   <font size="3"><b>Xiaopeng Wei</b></font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
   <font size="3"><b>Baocai Yin</b></font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
