--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -87,9 +87,9 @@ The dataset can be used freely if you agree with all the following terms.<br>
 <button id="btnSubmit">Send Request</button>
 <br><br><br><br>
 
-
+<h2>Website visit statistics</h2>
 <hr/>
-<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=cgnXxI9HEVeFWXB9OHp4vJCVBQJNiN6JcXvp43AQx44&w=200"></script>
+<script type="text/javascript" align="center" id="clstr_globe" src="//clustrmaps.com/globe.js?d=cgnXxI9HEVeFWXB9OHp4vJCVBQJNiN6JcXvp43AQx44&w=200"></script>
 
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
