--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -71,6 +71,11 @@ var _hmt = _hmt || [];
 </td>
 </table>
   
+<table align="center">
+<tr>
+	<td align="center"><img border=0 height=450 width=900 src="example_data.png"></td>
+</tr>
+</table>
   
 <h2><p><font size="5" color="black"><b>Application for Access for Non-Commercial Use</b></font></p></h2>
 <hr/>
