--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -117,7 +117,7 @@ The dataset can be used freely if you agree with all the following terms.<br>
 <br>
 <button id="btnSubmit">Send Request</button>
 <br><br><br><br>
-<h4>If you do not receive the email about the dataset download after applying, please contact us via this email (jqz@mail.dlut.edu.cn).</h4>
+<h4>(If you do not receive the email about the dataset download after applying, please contact us via this email (jqz@mail.dlut.edu.cn).)</h4>
 
 <h2>Website visit statistics</h2>
 <hr/>
