--- a/content/dataset/contact.html
+++ b/content/dataset/contact.html
@@ -112,6 +112,8 @@ The dataset can be used freely if you agree with all the following terms.<br>
 	Institute: <input id="second" name='institute' type="text" style="width: 690px; height: 15px;" placeholder="Your institute..." class="form__input" />
 	<br><br>
 	E-mail: <input id="third" name='email' type="text" style="width: 700px; height: 15px;" placeholder="Your E-mail address..." class="form__input" />
+  <br><br>
+	Infor: <input id="forth" name='infor' type="text" style="width: 700px; height: 30px;" placeholder="Please tell us about yourself, your position, your curent(research) project and what exactly you woud like to use the FE datst for. Access will only be granted if all details are provided." class="form__input" />
     <!--<textarea id="third" name='e-mail' type="text" placeholder="Your E-mail..." class="form__input"></textarea>-->
 </form>
 <br>
